--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,1 +1,47 @@
 @charset "UTF-8";
+
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    background-color: rgb(64, 120, 147);
+    width: 100vw;
+    height: 100vh;
+}
+
+main{
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+}
+
+section#login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border-radius:15px ;
+    width: 250px;
+    height: 500px;
+    overflow: hidden;
+
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
+}
+
+div#img{
+    display: block;
+    background:black url('../imagens/pexels-jankat-çapar-15143451.jpg')  no-repeat center bottom;
+    background-size: cover;
+    height: 205px;
+}
+
+div#form{
+    display: block;
+    padding: 10px;
+}
