--- a/estilos/media-queries.css
+++ b/estilos/media-queries.css
@@ -25,6 +25,14 @@ Grandes telas acima de 1200px*/
         float: right;
         width: 65%;
     }
+
+    #form h1{
+        font-size: 2em;
+    }
+
+    #form p{
+        font-size: .9em;
+    }
 }
 
 @media screen and (min-width:992px){ /*telas grandes*/
@@ -37,13 +45,17 @@ Grandes telas acima de 1200px*/
     }
 
     div#img{
-        float: left;
-        width: 35%;
+        float: right;
+        width: 50%;
         height: 100%;
     }
 
     div#form{
-        float: right;
-        width: 65%;
+        float: left;
+        width: 50%;
+    }
+
+    #form h1{
+        font-size: 2em;
     }
 }
