--- a/estilos/style.css
+++ b/estilos/style.css
@@ -26,7 +26,7 @@ section#login{
     transform: translate(-50%, -50%);
     background-color: white;
     border-radius:15px ;
-    width: 250px;
+    width: 254px;
     height: 500px;
     overflow: hidden;
 
@@ -44,4 +44,12 @@ div#img{
 div#form{
     display: block;
     padding: 10px;
+}
+
+#form h1{
+    text-align: center;
+}
+
+#form p{
+    font-size: .9em;
 }
