--- a/estilos/style.css
+++ b/estilos/style.css
@@ -23,13 +23,12 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     background-color: white;
     border-radius:15px ;
     width: 254px;
-    height: 500px;
+    height: 515px;
     overflow: hidden;
-
+    transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
@@ -52,4 +51,61 @@ div#form{
 
 #form p{
     font-size: .9em;
+}
+
+.campo{
+    background-color: rgb(213, 213, 213);
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+.campo > label{
+    display: none;
+}
+
+form > input[type=submit]{
+    display: block;
+    width: 100%;
+    font-size: .9em;
+    height: 40px;
+    background-color: grey;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    color: white;
+    margin-bottom: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.489);
+    font-weight: bolder;
+}
+
+form > input[type=submit]:hover{
+    background-color: rgb(149, 149, 149);
+    transition: .5s;
+}
+
+a{
+    display: block;
+    text-align: center;
+    font-size: .9em;
+    width: 100%;
+    height: 40px;
+    background-color:white ;
+    text-decoration: none;
+    border-radius: 5px;
+    color: black;
+    padding-top: 7px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.489);
+    font-weight: bolder;
+}
+
+a:hover{
+    background-color: rgba(128, 128, 128, 0.275);
+    transition: .5s;
+}
+
+input{
+    border: none;
+    outline: none;
+    background-color: rgb(213, 213, 213);
 }
