--- a/estilos/media-queries.css
+++ b/estilos/media-queries.css
@@ -8,7 +8,7 @@ Grandes telas acima de 1200px*/
 
 @media screen and (min-width:768px) and (max-width:992px){ /*tablet*/
     body{
-        background-image: linear-gradient(to top, rgb(84, 96, 92), rgb(64, 120, 147));
+        background-image: linear-gradient(to top, black, rgb(190, 190, 190));
     }
 
     section#login{
@@ -37,7 +37,7 @@ Grandes telas acima de 1200px*/
 
 @media screen and (min-width:992px){ /*telas grandes*/
     body{
-        background-image: linear-gradient(to top, rgb(84, 96, 92), rgb(64, 120, 147));
+        background-image: linear-gradient(to top, black, rgb(190, 190, 190));
     }
 
     section#login{
