--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background-color: rgb(64, 120, 147);
+    background-color: rgb(190, 190, 190);
     width: 100vw;
     height: 100vh;
 }
@@ -31,6 +31,7 @@ section#login{
     transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.591);
 }
 
 div#img{
